2019-11-04    <alexander.nelson@nist.gov>

	* Python: Relax schema presence check for local pytest builds
	* objects.py: Add and test filesize of diskimageobject element

2019-11-01    <alexander.nelson@nist.gov>

	* Python: Remove copies of library files
	* objects.py: Add test, and new test serialization and schema-validation framework, for DiskImageObject

2019-07-05    <alexander.nelson@nist.gov>

	* __init__.py: Catch further commenting of _logger module-level object

2019-03-14    <alexander.nelson@nist.gov>

	* Project: Add Travis Continuous Integration
	* __init__.py: Address deprecated escape sequence warning
	* Python: Adjust unit test subprocess call to work in pytest, Pythons 2 and 3

2018-07-06    <alexander.nelson@nist.gov>

	* walk_to_dfxml.py: Add property-ignoring flag
	* Python: Add support for hashes added in DFXML 1.2.0

2018-04-09    <alexander.nelson@nist.gov>

	* Python: Update scripts' reported DFXML version to 1.2.0
	* Objects.py: Add new container classes
	* Objects.py: Rewrite iterparse loop
	* Objects.py: Normalize property listings and function recursion style
	* Objects.py: Update _warned_elements record
	* Objects.py: Adjust comment and code cosmetics

2018-02-28    <alexander.nelson@nist.gov>

	* Objects.py: Handle numeric casting and st_ino in Python 2 on Windows 7

2018-02-15    <alexander.nelson@nist.gov>

	* _pick_pythons.sh: Adjust Python selection; resolve inline comment; remove EOL'd Python3 versions
	* Python: Add disclaimer text to files created or modified at NIST.

2017-11-06    <alexander.nelson@nist.gov>

	* make_differential_dfxml.py: Revise appearance of "modified" differential annotation

2017-10-11    <alexander.nelson@nist.gov>

	* Python: Add hashdigest for SHA256 to core libraries, walk script, unit tests, and sample data.

2017-09-20    <alexander.nelson@nist.gov>

	* Python: Record runtime modules used in Objects.py-based DFXML generators.
	* Objects.py: Add LibraryObject reading and writing, and unit tests.
